--- a/About_Me.html
+++ b/About_Me.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<link rel="stylesheet" type="text/css" href="Styling.css">
+<link rel="stylesheet" type="text/css" href="./assets/Styling.css">
 <html>
 <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHeQbvhpql8f-Xl6uUIphnoW905hlesjtpFxqbBAvpqG839dZWjA">
 <head>
