--- a/About.html
+++ b/About.html
@@ -8,9 +8,9 @@
 <SECTION>
 	<h1>Gabriel Deleon</h1>
 
-		<ul class="one"><a href="About.html">About</a></ul>
-		<ul class="two"><a href="Portfolio.html">Portfolio</a></ul>
-		<ul class="three"><a href="Contact.html">Contact</a></ul>
+		<ul class="one">< href="">About</a></ul>
+		<ul class="two">< href="">Portfolio</a></ul>
+		<ul class="three">< href="">Contact</a></ul>
 
 </SECTION>
 
