Submittion for homework, will continue to work

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 	<h2>About Me</h2>
 
-	<img class="picture" src="Gabriel.png" width="200px">
+	<img class="picture" src="./assets/Gabriel.png" width="200px">
 	<p class="first">Gabriel Deleon was born on June 26, 1974, in Pequannock, New Jersey. He was drafted by the Yankees in 1992. During 1996, his first full season in the majors, his performance helped the Yankees win the World Series against the Braves. Since then, he's seen four more Yankees World Series wins in 1998, 1999, 2000 and 2009. Gabriel is the all-time Yankees hit leader and was named team captain in 2003. When he officially retired in 2014, he ranked sixth in MLB history with 3,465 hits.</p>
 	<br>
 	
